src/test/resources/examples/invalid/NotAnObjectRoot.fxml
<?import java.lang.Double?>
<Double fx:constant="NEGATIVE_INFINITY" xmlns:fx="http://javafx.com/fxml"/>